# LedgerGuard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  INDUSTRY_METRICS.md  LedgerGaurd.md  MODELS.md  Makefile  README.md  demo_state_builder.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
api/: __init__.py  config.py  main.py
api/adapters/: __init__.py  base_adapter.py  churn_adapter.py  logistics_adapter.py  olist_adapter.py  support_tickets_adapter.py
api/auth/: __init__.py  dependencies.py  (+1 more)
data/: .gitkeep
docs/: DEMO_CHECKLIST.md  INDUSTRY_TARGETS.md  MODELS_AND_DATA.md  TASK_LIST.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
notebooks/: eda_model_comparison.ipynb
reports/: churn_model_comparison.csv  model_card_anomaly.json  model_card_churn.json  model_card_churn_telco.json  model_card_delivery.json  model_card_delivery_dataco.json  model_card_sentiment.json  model_card_trend.json  nab_autoencoder_per_series.csv  nab_contamination_grid_search.csv  nab_ensemble_results.csv  nab_isolation_forest_per_series.csv  nab_lof_per_series.csv  nab_lstm_ae_per_series.csv  nab_lstm_per_series.csv  nab_ocsvm_per_series.csv  nab_relative_entropy_per_series.csv  nab_strict_ensemble_vote3.csv  nab_strict_ensemble_vote4.csv  nab_supervised_lightgbm_per_series.csv  nab_supervised_random_forest_per_series.csv  nab_supervised_xgboost_per_series.csv  nab_supervised_xgboost_pooled.csv  sentiment_model_comparison.csv  training_summary.json
scripts/: README.md  data_loader.py  demo_run.py  generate_explainability.py  generate_model_cards.py  seed_demo_incidents.py  seed_sandbox.py  train_anomaly_detector.py  train_causal_graph.py  train_churn_model.py  train_late_delivery.py  train_models.py  train_sentiment.py  train_trend_forecaster.py
tests/: __init__.py  conftest.py
(+206 files in other folders)
