[project]
name = "ledgerguard"
version = "0.1.0"
description = "Business Reliability Engine - Principal-grade anomaly detection and RCA for financial systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "ruptures>=1.1.9",
    "networkx>=3.2.1",
    "lightgbm>=4.1.0",
    "duckdb>=0.9.2",
    "structlog>=23.2.0",
    "weasyprint>=60.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "mlflow>=2.9.2",
    "optuna>=3.5.0",
    "hypothesis>=6.92.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.8.2",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "shap>=0.43.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "xgboost>=2.0.0",
]
dev = [
    "black>=23.12.1",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "ipython>=8.18.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--verbose --cov=api --cov-report=term-missing --cov-report=html"
